samples/_failures_safe/1761263869_12f5ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af83854d.c: In function ‘main’:
./samples/SAFE/__tmp_af83854d.c:136:12: error: missing terminating " character
  136 |     printf("INFO:     %d\n
      |            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_af83854d.c:136:5: error: expected expression at end of input
  136 |     printf("INFO:     %d\n
      |     ^~~~~~
./samples/SAFE/__tmp_af83854d.c:136:5: error: expected declaration or statement at end of input
